k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-scheduler-svc
  namespace: dev
spec:
  selector:
    app: news-scheduler-svc
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
