k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-scheduler-svc
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dev.news-scheduler.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: news-scheduler-svc
                port:
                  number: 80
